# eerepr

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.binder/: environment.yml
.github/: pull_request_template.md
.github/scripts/: make_ee_token.py
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/notebooks/: demo.ipynb
eerepr/: __init__.py  config.py  html.py  repr.py  style.py  utils.py
eerepr/static/css/: style.css
eerepr/static/js/: script.js  widget.js
tests/: cache.py  conftest.py  preview_html.py  test_cache.py  test_config.py  test_html.py  test_reprs.py
tests/data/: .gitignore  data.json  test_full_repr.yml  test_regression_band_dict_.yml  test_regression_confusion_matrix_.yml  test_regression_date_.yml  test_regression_daterange_.yml  test_regression_dict_.yml  test_regression_feature_collection_.yml  test_regression_long_list_.yml  test_regression_multilinestring_.yml  test_regression_multipoint_.yml  test_regression_multipolygon_.yml  test_regression_null_feature_.yml  test_regression_objects_band_dict_.yml  test_regression_objects_classifier_.yml  test_regression_objects_clusterer_.yml  test_regression_objects_confusion_matrix_.yml  test_regression_objects_constant_image_.yml  test_regression_objects_date_.yml  test_regression_objects_daterange_.yml  test_regression_objects_dict_.yml  test_regression_objects_feature_.yml  test_regression_objects_feature_collection_.yml  test_regression_objects_filter_.yml  test_regression_objects_image_collection_.yml  test_regression_objects_kernel_.yml  test_regression_objects_linearring_.yml  test_regression_objects_linestring_.yml  test_regression_objects_long_list_.yml  test_regression_objects_multilinestring_.yml  test_regression_objects_multipoint_.yml  test_regression_objects_multipolygon_.yml  test_regression_objects_null_feature_.yml  test_regression_objects_number_.yml  test_regression_objects_pixel_custom_.yml  test_regression_objects_pixel_double_.yml  test_regression_objects_pixel_float_.yml  test_regression_objects_pixel_int16_.yml  test_regression_objects_pixel_int32_.yml  (+19 more)
