[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eerepr"
dynamic = ["version"]
description = "Code Editor-style reprs for Earth Engine data in a Jupyter notebook."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Aaron Zuspan" }]
keywords = [
    "earthengine",
    "gee",
    "html",
    "jupyter",
    "notebook",
    "reprs",
]
dependencies = [
    "earthengine-api",
]

[project.optional-dependencies]
dev = [
    "black",
    "ipykernel",
    "isort",
    "jupyterlab",
    "pytest",
    "pytest-cov",
    "hatch",
]

[project.urls]
Homepage = "https://github.com/aazuspan/eerepr"

[tool.hatch.version]
path = "eerepr/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/eerepr"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
all = "pytest . {args}"
cov = "pytest . --cov=eerepr {args}"

