[metadata]
name = eerepr
version = 0.0.2
url = https://github.com/aazuspan/eerepr
author = Aaron Zuspan
license_file = LICENSE
description = Code Editor-style reprs for Earth Engine data in a Jupyter notebook.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    earthengine
    gee
    jupyter
    notebook
    html
    reprs

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    earthengine-api

[options.package_data]
eerepr =
    static/css/*
    static/js/*

[options.extras_require]
dev =
    black
    isort
    pytest
    ipykernel
    pytest-cov
    jupyterlab
    twine
    bumpversion
